fix lazy load routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,122 +6,112 @@
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="01-utility-first/index.html"
+            routerLink="/01-utility-first"
             >Utility First Example</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a
-            class="text-blue-500 hover:text-blue-300"
-            href="02-colors/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="02-colors"
             >Colors</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="03-container-spacing/index.html"
+            routerLink="/03-container-spacing"
             >Container & Spacing</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="04-typography/index.html"
+            routerLink="/04-typography"
             >Typography</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a
-            class="text-blue-500 hover:text-blue-300"
-            href="05-sizing/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/05-sizing"
             >Sizing</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="06-layout-position/index.html"
+            routerLink="/06-layout-position"
             >Layout & Position</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="07-backgrounds-shadows/index.html"
+            routerLink="/07-backgrounds-shadows"
             >Backgrounds & Shadows</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a
-            class="text-blue-500 hover:text-blue-300"
-            href="08-borders/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/08-borders"
             >Borders & Border Radius</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a
-            class="text-blue-500 hover:text-blue-300"
-            href="09-filters/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/09-filters"
             >Filters</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="10-interactivity/index.html"
+            routerLink="/10-interactivity"
             >Interactivity</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="11-breakpoints/index.html"
+            routerLink="/11-breakpoints"
             >Breakpoints</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a
-            class="text-blue-500 hover:text-blue-300"
-            href="12-columns/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/12-columns"
             >Column Layouts</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a class="text-blue-500 hover:text-blue-300" href="13-flex/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/13-flex"
             >Flexbox</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
-          <a class="text-blue-500 hover:text-blue-300" href="14-grid/index.html"
+          <a class="text-blue-500 hover:text-blue-300" routerLink="/14-grid"
             >Grid</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="15-transform-transition/index.html"
+            routerLink="/15-transform-transition"
             >Transform & Transitions</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="16-animation/index.html"
+            routerLink="/16-animation"
             >Animation</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="17-customization/index.html"
+            routerLink="/17-customization"
             >Customization & Config</a
           >
         </li>
         <li class="text-lg border border-blue-200 p-2 my-4">
           <a
             class="text-blue-500 hover:text-blue-300"
-            href="18-dark-mode/index.html"
+            routerLink="/18-dark-mode"
             >Dark Mode</a
           >
         </li>
@@ -129,6 +119,6 @@
     </div>
   </div>
   <div class="size-100 grow bg-amber-700 h-full">
-     <router-outlet />
+    <router-outlet></router-outlet>
   </div>
 </div>
