update first screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,7 +118,7 @@
       </ul>
     </div>
   </div>
-  <div class="size-100 grow bg-amber-700 h-full">
+  <div class="size-100 grow bg-white h-full">
     <router-outlet></router-outlet>
   </div>
 </div>
