--- a/src/app/pages/01-utility-first/index/index.component.html
+++ b/src/app/pages/01-utility-first/index/index.component.html
@@ -1,1 +1,21 @@
-<p>01-utility-first</p>
+<div class="flex flex-col items-center justify-center h-screen">
+  <h1 class="text-3xl font-bold">Utility First</h1>
+  <p class="text-lg">This is a utility-first CSS example</p>
+  <p class="text-sm text-gray-500">Using Tailwind CSS</p>
+
+   <div
+      class="flex items-center p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-x-4"
+    >
+      <div>
+        <img class="h-12 w-12" src="img/warning.svg" alt="alert" />
+      </div>
+      <div>
+        <div class="text-xl font-medium text-black">Are You Sure?</div>
+        <p class="text-slate-500">You are about to delete a post</p>
+      </div>
+    </div>
+
+</div>
+
+
+
